login page update

--- a/code/public/index.html
+++ b/code/public/index.html
@@ -19,7 +19,7 @@
   <header>
     <a href="#"><img id="logo" src="images/logo.png"></a>
     <section class="header-right">
-      <a href="#" class="btn-login">LOGIN</a>
+      <a href="login.html" class="btn-login">LOGIN</a>
     </section>
   </header>
   <main>
@@ -89,7 +89,7 @@
     </section>
 
   </main>
-  
+
   <footer>
     <section>
       <img src="images/logo.png"/>
