Mapa update + Start User Menu

--- a/code/public/index.html
+++ b/code/public/index.html
@@ -34,7 +34,8 @@
             <option selected>No Club</option>
           </select>
           <input type="date"/>
-          <input type="button" class="btn-find-event" value="FIND EVENT"/>
+          <a href="mapa.html" class="btn-find-event">FIND EVENT</a>
+          <!-- <input type="button" class="btn-find-event" value="FIND EVENT"/> -->
         </form>
       </div>
     </section>
