--- a/code/public/usermenu.html
+++ b/code/public/usermenu.html
@@ -20,12 +20,33 @@
   <header>
     <a href="index.html"><img id="logo" src="images/logo.png"></a>
   </header>
-  <main>
-      <section class="menu-box">
-          <section>
-
+  <main class="main">
+    <section class="main-box">
+          <section class="nextevent-box">
+            <h1>NEXT EVENT</h1>
+            <h3>DATE</h3>
           </section>
-      </section>
+          <section class="line1">
+            <div class="left-box">
+            <h1>MY EVENTS</h1>
+            <h3>Events created by you</h3>
+            </div>
+            <div class="right-box">
+            <h1>EVENTS</h1>
+            <h3>Events you are attending</h3>
+            </div>
+          </section>
+          <section class="line2">
+            <div class="left-box">
+              <h1>JOIN A EVENT</h1>
+              <h3>Join another event to get some fun</h3>
+              </div>
+              <div class="right-box">
+              <h1>CREATE A NEW EVENT</h1>
+              <h3>Invite your friends or wait for any other player</h3>
+              </div>
+          </section>
+    </section>      
   </main>
   
   <footer>
