connection to database, get sports and show on find event box

--- a/code/public/index.html
+++ b/code/public/index.html
@@ -11,6 +11,9 @@
   <!-- icons -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 
+  <!-- JQuery -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
   <script src="/javascripts/index.js"></script>
 
 </head>
@@ -28,7 +31,6 @@
       <div class="search-box">
         <form class="form-search-event">
           <select id="sport" name="sport">
-            <option selected>All Sports</option>
           </select>
           <select id="club" name="club">
             <option selected>No Club</option>
