Events Data Base Update

--- a/code/public/index.html
+++ b/code/public/index.html
@@ -35,9 +35,8 @@
           <select id="club" name="club">
             <option selected>No Club</option>
           </select>
-          <input type="date"/>
-          <a href="mapa.html" class="btn-find-event">FIND EVENT</a>
-          <!-- <input type="button" class="btn-find-event" value="FIND EVENT"/> -->
+          <input type="date" id="date"/>
+          <input type="button" class="btn-find-event" value="FIND EVENT" onclick="findEvent();"/>
         </form>
       </div>
     </section>
