show error if events not found

--- a/code/public/index.html
+++ b/code/public/index.html
@@ -38,6 +38,7 @@
           <input type="date" id="date"/>
           <input type="button" class="btn-find-event" value="FIND EVENT" onclick="findEvent();"/>
         </form>
+        <p id="error"></p>
       </div>
     </section>
 
