--- a/code/public/index.html
+++ b/code/public/index.html
@@ -22,7 +22,11 @@
   <header>
     <a href="#"><img id="logo" src="images/logo.png"></a>
     <section class="header-right">
-      <a href="login.html" class="btn-login">LOGIN</a>
+      <a href="login.html" id= "loginButton" class="btn-login">LOGIN</a>
+      <section id="boxUser" class="boxUser">
+        <p id="username"></p>
+        <i class="fas fa-user"></i>
+      </section>
     </section>
   </header>
   <main>
