--- a/code/public/login.html
+++ b/code/public/login.html
@@ -12,6 +12,9 @@
   <!-- icons -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 
+  <!-- JQuery -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
   <script src="/javascripts/login.js"></script>
 
 </head>
@@ -31,7 +34,8 @@
                 <label for="username">Username</label>
                 <input type="text" id="username" required/>
 
-                <input type="button" class="submit-btn" value="LOGIN"/>
+                <input type="button" class="submit-btn" value="LOGIN" onclick="loginButton();"/>
+                <p id="error"></p>
               </section>
 
               <section id="sectionRegister" class="section-register section-disable">
