User Button Updated

--- a/code/public/index.html
+++ b/code/public/index.html
@@ -23,10 +23,10 @@
     <a href="#"><img id="logo" src="images/logo.png"></a>
     <section class="header-right">
       <a href="login.html" id= "loginButton" class="btn-login">LOGIN</a>
-      <section id="boxUser" class="boxUser">
+      <a href="usermenu.html" id="boxUser" class="boxUser">
         <p id="username"></p>
         <i class="fas fa-user"></i>
-      </section>
+      </a>
     </section>
   </header>
   <main>
