--- a/code/public/usermenu.html
+++ b/code/public/usermenu.html
@@ -46,6 +46,12 @@
               <h3>Invite your friends or wait for any other player</h3>
               </div>
           </section>
+          <section class="line3">
+            <div class="logoutBox">
+              <h1>LOG OUT</h1>
+              <h3>See you another time!</h3>
+            </div>
+          </section>
     </section>      
   </main>
   
