--- a/code/public/usermenu.html
+++ b/code/public/usermenu.html
@@ -21,6 +21,10 @@
     <a href="index.html"><img id="logo" src="images/logo.png"></a>
   </header>
   <main class="main">
+    <section class="mainbox-left">
+      <i class="fas fa-user"></i>
+      <p id="username1"></p>
+    </section> 
     <section class="main-box">
           <section class="nextevent-box">
             <h1>NEXT EVENT</h1>
@@ -52,12 +56,15 @@
               <h3>See you another time!</h3>
             </div>
           </section>
-    </section>      
+    </section>
+    <section class="mainbox-right">
+      <img src="images/sportsplus.png" class="image1"/>
+    </section>     
   </main>
   
   <footer>
     <section>
-      <img src="images/logo.png"/>
+      <img src="images/logo.png" class="image"/>
       <p>&copy;  2020 SportPlus. All rights reserved.</p>
     </section>
   </footer>
