Dropdown Button Start

--- a/code/public/index.html
+++ b/code/public/index.html
@@ -22,10 +22,12 @@
   <header>
     <a href="#"><img id="logo" src="images/logo.png"></a>
     <section class="header-right">
-      <a href="login.html" id= "loginButton" class="btn-login">LOGIN</a>
-      <a href="usermenu.html" id="boxUser" class="boxUser">
-        <p id="username"></p>
-        <i class="fas fa-user"></i>
+      <!-- <a href="login.html" id= "loginButton" class="btn-login">LOGIN</a> -->
+      <!-- <a href="usermenu.html" id="boxUser" class="boxUser"> -->
+      <button onclick="dropdownFunction()" id="boxUser" class="dropbtn"></button>
+      <a href="#home">Home</a>
+        <!-- <p id="username"></p>
+        <i class="fas fa-user"></i> -->
       </a>
     </section>
   </header>
