--- a/code/public/index.html
+++ b/code/public/index.html
@@ -22,13 +22,18 @@
   <header>
     <a href="#"><img id="logo" src="images/logo.png"></a>
     <section class="header-right">
-      <!-- <a href="login.html" id= "loginButton" class="btn-login">LOGIN</a> -->
-      <!-- <a href="usermenu.html" id="boxUser" class="boxUser"> -->
-      <button onclick="dropdownFunction()" id="boxUser" class="dropbtn"></button>
-      <a href="#home">Home</a>
-        <!-- <p id="username"></p>
-        <i class="fas fa-user"></i> -->
-      </a>
+      <a href="login.html" id= "loginButton" class="btn-login">LOGIN</a>
+      <section class="dropdown">
+        <section id="boxUser" class="boxUser">
+          <p id="username"></p>
+          <i class="fas fa-user"></i>
+        </section>
+        <div class="dropdown-content">
+          <a href="#"><i class="far fa-calendar-alt"></i> Events</a>
+          <a href="#"><i class="fas fa-user-cog"></i> Perfil</a>
+          <a href="#" onclick="logout();"><i class="fas fa-sign-out-alt"></i> Log out</a>
+        </div>
+      </section>
     </section>
   </header>
   <main>
