events page, my events table

--- a/code/public/index.html
+++ b/code/public/index.html
@@ -29,8 +29,8 @@
           <i class="fas fa-user"></i>
         </section>
         <div class="dropdown-content">
-          <a href="#"><i class="far fa-calendar-alt"></i> Events</a>
-          <a href="#"><i class="fas fa-user-cog"></i> Perfil</a>
+          <a href="events.html"><i class="far fa-calendar-alt"></i> Events</a>
+          <a href="#"><i class="fas fa-user-cog"></i> Profile</a>
           <a href="#" onclick="logout();"><i class="fas fa-sign-out-alt"></i> Log out</a>
         </div>
       </section>
@@ -67,7 +67,7 @@
       <section class="box-item">
         <i class="fas fa-map-marker-alt"></i>
         <section>
-          <h2>FIND A EVENT OR CREATE A NEW ONE</h2>
+          <h2>FIND AN EVENT OR CREATE A NEW ONE</h2>
           <p>
             If you cannot find any event of the modality you are looking for, near you, you can always create a new one.
           </p>
