--- a/code/public/events.html
+++ b/code/public/events.html
@@ -46,29 +46,8 @@
     </section>
   </nav>
   <main>
-    <table id="table-my-events">
-        <tr>
-            <th>NAME</th>
-            <th>SPORT</th>
-            <th>DATE</th>
-            <th>STATUS</th>
-            <th>PRIVACY</th>
-            <th>PLAYERS</th>
-            <th></th>
-          </tr>
-          <tr>
-            <td>Basket With Friends</td>
-            <td><i class="fas fa-basketball-ball"></i></td>
-            <td>06/01/21 15:00</td>
-            <td><span class="box-status">looking for players</span></td>
-            <td><i class="fas fa-unlock"></i></td>
-            <td>2/4</td>
-            <td>
-                <a class="btn-edit"><i class="fas fa-pen"></i></a>
-                <a class="btn-delete"><i class="fas fa-trash"></i></a>
-            </td>
-          </tr> 
-    </table>
+    <h2 id="error"></h2>
+    <table id="table-my-events"></table>
   </main>
 
   <footer>
