--- a/code/public/myevents.html
+++ b/code/public/myevents.html
@@ -2,7 +2,7 @@
 
 <head>
   <title>SportsPlus</title>
-  <link rel="stylesheet" href="/stylesheets/events-style.css">
+  <link rel="stylesheet" href="/stylesheets/myevents-style.css">
   <link rel="icon" href="./images/favicon.png" type="image/png">
   
   <!-- Montserrat Font -->
@@ -14,7 +14,7 @@
   <!-- JQuery -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-  <script src="/javascripts/events.js"></script>
+  <script src="/javascripts/myevents.js"></script>
 
 </head>
 
@@ -42,7 +42,7 @@
         <a href="#"><i class="fas fa-trophy"></i> Events Participated</a>
     </section>
     <section class="nav-button">
-        <a href="#" class="btn-create-event"><i class="fas fa-plus"></i> EVENT</a>
+        <a href="addevent.html" class="btn-create-event"><i class="fas fa-plus"></i> EVENT</a>
     </section>
   </nav>
   <main>
