--- a/code/public/index.html
+++ b/code/public/index.html
@@ -29,7 +29,7 @@
           <i class="fas fa-user"></i>
         </section>
         <div class="dropdown-content">
-          <a href="events.html"><i class="far fa-calendar-alt"></i> Events</a>
+          <a href="myevents.html"><i class="far fa-calendar-alt"></i> Events</a>
           <a href="#"><i class="fas fa-user-cog"></i> Profile</a>
           <a href="#" onclick="logout();"><i class="fas fa-sign-out-alt"></i> Log out</a>
         </div>
