add event page update

--- a/code/public/addevent.html
+++ b/code/public/addevent.html
@@ -3,6 +3,7 @@
 <head>
   <title>SportsPlus</title>
   <link rel="stylesheet" href="/stylesheets/myevents-style.css">
+  <link rel="stylesheet" href="/stylesheets/addevent-style.css">
   <link rel="icon" href="./images/favicon.png" type="image/png">
   
   <!-- Montserrat Font -->
@@ -37,7 +38,7 @@
   </header>
   <nav>
     <section class="nav-links">
-        <a href="#"><i class="far fa-calendar-alt"></i> My Events</a>
+        <a href="myevents.html"><i class="far fa-calendar-alt"></i> My Events</a>
         <a href="#"><i class="far fa-calendar-check"></i> Events to Attend</a>
         <a href="#"><i class="fas fa-trophy"></i> Events Participated</a>
     </section>
