--- a/code/public/addevent.html
+++ b/code/public/addevent.html
@@ -2,7 +2,6 @@
 
 <head>
   <title>SportsPlus</title>
-  <link rel="stylesheet" href="/stylesheets/myevents-style.css">
   <link rel="stylesheet" href="/stylesheets/addevent-style.css">
   <link rel="icon" href="./images/favicon.png" type="image/png">
   
@@ -12,10 +11,22 @@
   <!-- icons -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 
+  <!-- Leaflet CSS -->
+
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
+  integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
+  crossorigin=""/>
+
+  <!-- Leaflet JS -->
+
+  <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
+  integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
+  crossorigin=""></script>
+
   <!-- JQuery -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-  <script src="/javascripts/myevents.js"></script>
+  <script src="/javascripts/addevent.js"></script>
 
 </head>
 
@@ -29,13 +40,14 @@
           <i class="fas fa-user"></i>
         </section>
         <div class="dropdown-content">
-          <a href="#"><i class="far fa-calendar-alt"></i> Events</a>
+          <a href="myevents.html"><i class="far fa-calendar-alt"></i> Events</a>
           <a href="#"><i class="fas fa-user-cog"></i> Profile</a>
           <a href="#" onclick="logout();"><i class="fas fa-sign-out-alt"></i> Log out</a>
         </div>
       </section>
     </section>
   </header>
+  <section id="box-info"></section>
   <nav>
     <section class="nav-links">
         <a href="myevents.html"><i class="far fa-calendar-alt"></i> My Events</a>
@@ -47,15 +59,25 @@
     </section>
   </nav>
   <main>
-    <input type="text" id="event_name"/>
-    <input type="text" id="event_desc"/>
-    <select id="sport"></select>
-    <select id="club"></select>
-    <input type="date" id="event_date"/>
-    <select id="event_privacy"></select>
-    <input type="number" step="1" min="1" id="event_min"/>
-    <input type="number" step="1" min="2" id="event_max"/>
-    <input type="number" step="1" id="event_duration"/>
+    <section class="section-inputs">
+      <input type="text" id="event_name" placeholder="Event name"/>
+      <textarea rows="4" cols="50" id="event_desc" placeholder="Event description"></textarea>
+      <select id="sport"></select>
+      <select id="club" onchange="addMarkerMap();"></select>
+      <input type="date" id="event_date"/>
+      <select id="event_privacy">
+        <option value="public">Public</option>
+        <option value="private">Private</option>
+      </select>
+      <input type="number" step="1" min="1" id="event_min" placeholder="Min" value="1"/>
+      <input type="number" step="1" min="2" id="event_max" placeholder="Max" value="2"/>
+      <input type="number" step="1" id="event_duration" placeholder="Event Duration"/>
+      <button class="btn-add-event" onclick="createEventSubmit();">CREATE</button>
+    </section>
+    <section class="section-map">
+      <h2>Event location</h2>
+      <div id="map"></div>
+    </section>
   </main>
 
   <footer>
