--- a/code/public/mapa.html
+++ b/code/public/mapa.html
@@ -39,7 +39,43 @@
     <div id="mapa">
 
     </div>
+    <div id="myModal" class="modal">
+      <div class="modal-content">
+        <h1 id="event-name"></h1>
+        <!-- <table>
+          <tr>
+            <th></th>
+            <th></th>
+            <th></th>
+          </tr>
+          <tr>
+            <td><h2>SPORT</h2></td>
+            <td><h3 id="sport"></h3></td>
+            <td><h2>DESCRIPTION</h2></td>
+          </tr>
+          <tr>
+            <td><h2>DATE</h2></td>
+            <td><h3 id="date"></h3></td>
+            <td><h3 id="descricao"></h3></td>
+          </tr>
+          <tr>
+            <td><h2>PRIVACY</h2></td>
+            <td><h3 id="privacy"></h3></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td><h2>PLAYERS</h2></td>
+            <td><h3 id="players"></h3></td>
+            <td></td>
+          </tr>
+        </table> -->
+        <div id="map-event"></div>
+        <span class="close" onclick="closeModel()">&times;</span>
+      </div>
+    
+    </div>
   </main>
+
   
 </body>
 
