--- a/code/public/mapa.html
+++ b/code/public/mapa.html
@@ -34,6 +34,20 @@
 <body>
   <header>
     <a href="index.html"><img id="logo" src="images/logo.png"></a>
+    <section class="header-right">
+      <a href="login.html" id= "loginButton" class="btn-login">Account</a>
+      <section class="dropdown">
+        <section id="boxUser" class="boxUser">
+          <p id="username"></p>
+          <i class="fas fa-user"></i>
+        </section>
+        <div class="dropdown-content">
+          <a href="myevents.html"><i class="far fa-calendar-alt"></i> Events</a>
+          <a href="#"><i class="fas fa-user-cog"></i> Profile</a>
+          <a href="#" onclick="logout();"><i class="fas fa-sign-out-alt"></i> Log out</a>
+        </div>
+      </section>
+    </section>
   </header>
   <main>
     <div id="mapa">
@@ -41,8 +55,9 @@
     </div>
     <div id="myModal" class="modal">
       <div class="modal-content">
+        <section>
         <h1 id="event-name"></h1>
-        <!-- <table>
+        <table>
           <tr>
             <th></th>
             <th></th>
@@ -68,7 +83,11 @@
             <td><h3 id="players"></h3></td>
             <td></td>
           </tr>
-        </table> -->
+        </table>
+        <div class="join-event-button" onclick="joinEvent()">
+          <h1>JOIN EVENT</h1>
+        </div>
+        </section>
         <div id="map-event"></div>
         <span class="close" onclick="closeModel()">&times;</span>
       </div>
