Event Description Update

--- a/code/public/mapa.html
+++ b/code/public/mapa.html
@@ -66,12 +66,13 @@
           <tr>
             <td><h2>SPORT</h2></td>
             <td><h3 id="sport"></h3></td>
-            <td><h2>DESCRIPTION</h2></td>
+            <td><h2>DESCRIPTION</h2>
+            <h3 id="descricao"></h3></td>
           </tr>
           <tr>
             <td><h2>DATE</h2></td>
             <td><h3 id="date"></h3></td>
-            <td><h3 id="descricao"></h3></td>
+            <td><h3></h3></td>
           </tr>
           <tr>
             <td><h2>PRIVACY</h2></td>
