calculate event route and attend event

--- a/code/public/addevent.html
+++ b/code/public/addevent.html
@@ -70,8 +70,8 @@
         <option value="0">Public</option>
         <option value="1">Private</option>
       </select>
-      <input type="number" step="1" min="1" id="event_min" placeholder="Min players" value="1" required/>
-      <input type="number" step="1" min="2" id="event_max" placeholder="Max players" value="2" required/>
+      <input type="number" step="1" min="1" id="event_min" placeholder="Min players" required/>
+      <input type="number" step="1" min="2" id="event_max" placeholder="Max players" required/>
       <input type="number" step="1" id="event_duration" placeholder="Event Duration" required/>
       <button class="btn-add-event" onclick="createEventSubmit();">CREATE</button>
     </section>
