--- a/code/public/mapa.html
+++ b/code/public/mapa.html
@@ -24,6 +24,8 @@
   integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
   crossorigin=""></script>
 
+  <script src="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.js"></script>
+
   <!-- JQuery -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
@@ -50,50 +52,47 @@
     </section>
   </header>
   <main>
-    <div id="mapa">
+    <div id="mapa"></div>
 
-    </div>
     <div id="myModal" class="modal">
       <div class="modal-content">
-        <section>
-        <h1 id="event-name"></h1>
-        <table>
-          <tr>
-            <th></th>
-            <th></th>
-            <th></th>
-          </tr>
-          <tr>
-            <td><h2>SPORT</h2></td>
-            <td><h3 id="sport"></h3></td>
-            <td><h2>DESCRIPTION</h2>
-            <h3 id="descricao"></h3></td>
-          </tr>
-          <tr>
-            <td><h2>DATE</h2></td>
-            <td><h3 id="date"></h3></td>
-            <td><h3></h3></td>
-          </tr>
-          <tr>
-            <td><h2>PRIVACY</h2></td>
-            <td><h3 id="privacy"></h3></td>
-            <td></td>
-          </tr>
-          <tr>
-            <td><h2>PLAYERS</h2></td>
-            <td><h3 id="players"></h3></td>
-            <td></td>
-          </tr>
-        </table>
-        <div class="join-event-button" onclick="joinEvent()">
-          <h1>JOIN EVENT</h1>
-        </div>
+
+        <section class="header-modal">
+          <h1 id="event-name"></h1>
+          <span class="close" onclick="closeModel()">&times;</span>
         </section>
-        <div id="map-event"></div>
-        <span class="close" onclick="closeModel()">&times;</span>
+
+        <section class="event">
+          <table>
+            <tr>
+              <td><h2>SPORT</h2></td>
+              <td><h3 id="sport"></h3></td>
+            </tr>
+            <tr>
+              <td><h2>DATE</h2></td>
+              <td><h3 id="date"></h3></td>
+            </tr>
+            <tr>
+              <td><h2>PRIVACY</h2></td>
+              <td><h3 id="privacy"></h3></td>
+            </tr>
+            <tr>
+              <td><h2>PLAYERS</h2></td>
+              <td><h3 id="players"></h3></td>
+            </tr>
+            <tr>
+              <td><h2>DESCRIPTION</h2></td>
+              <td><h3 id="descricao"></h3></td>
+            </tr>
+          </table>
+          <section class="event-map">
+            <div id="map-event"></div>
+          </section>
+        </section>
+        <div id="btn-div"></div>
       </div>
-    
     </div>
+
   </main>
 
   
