events to attend and participated, update queries

--- a/code/public/eventsAttend.html
+++ b/code/public/eventsAttend.html
@@ -2,7 +2,7 @@
 
 <head>
   <title>SportsPlus</title>
-  <link rel="stylesheet" href="/stylesheets/myevents-style.css">
+  <link rel="stylesheet" href="/stylesheets/eventsattend-style.css">
   <link rel="icon" href="./images/favicon.png" type="image/png">
   
   <!-- Montserrat Font -->
@@ -14,7 +14,7 @@
   <!-- JQuery -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-  <script src="/javascripts/myevents.js"></script>
+  <script src="/javascripts/eventsattend.js"></script>
 
 </head>
 
@@ -37,8 +37,8 @@
   </header>
   <nav>
     <section class="nav-links">
-        <a href="#" class="active-link"><i class="far fa-calendar-alt"></i> My Events</a>
-        <a href="eventsAttend.html"><i class="far fa-calendar-check"></i> Events to Attend</a>
+        <a href="myevents.html"><i class="far fa-calendar-alt"></i> My Events</a>
+        <a href="#" class="active-link"><i class="far fa-calendar-check"></i> Events to Attend</a>
         <a href="eventsParticipated.html"><i class="fas fa-trophy"></i> Events Participated</a>
     </section>
     <section class="nav-button">
