add user to the whitelist

--- a/code/public/myevents.html
+++ b/code/public/myevents.html
@@ -80,7 +80,7 @@
           <section id="box-whitelist" class="update-inputs" style="margin-left: 20px;">
             <h3>Add Player to the whitelist</h3>
             <input type="text" id="player_name" placeholder="Player name"/>
-            <button class="btn-add-event" onclick="addPlayer();">Add Player</button>
+            <button class="btn-add-event" onclick="addUserWhitelist();">Add Player</button>
           </section>
           
         </section>
